引入SecurityManager安全管理器解决用户代码权限问题